Choosing Your Desktop Linux Distribution
Signed-off-by: Tommy <contact@tommytran.io>

--- a/config.yml
+++ b/config.yml
@@ -65,7 +65,7 @@ params:
     hiddenInSingle: true # hide on single page
 
   editPost:
-    URL: "https://github.com/PrivSec-dev/privsec.dev/content"
+    URL: "https://github.com/PrivSec-dev/privsec.dev/blob/main/content"
     Text: "Suggest Changes" # edit text
     appendFilePath: true # to append file path to Edit link
 
