Disable autofetching from workflow
Signed-off-by: Tommy <contact@tommytran.io>

--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -16,8 +16,8 @@ jobs:
           submodules: true  # Fetch Hugo themes (true OR recursive)
           fetch-depth: 0    # Fetch all history for .GitInfo and .Lastmod
 
-      - name: Fecth External Blog
-        run: ./external-blogs.sh
+      #- name: Fecth External Blog
+      #  run: ./external-blogs.sh
 
       - name: Hugo setup
         uses: peaceiris/actions-hugo@v2
