Expect-CT Header
Signed-off-by: Tommy <contact@tommytran.io>

--- a/firebase.json
+++ b/firebase.json
@@ -40,6 +40,10 @@
           {
             "key": "Cross-Origin-Resource-Policy",
             "value": "same-origin"
+          },
+          {
+            "key": "Expect-CT",
+            "value": "enforce, max-age=63072000"
           }
         ]
       }    
