--- a/config.yml
+++ b/config.yml
@@ -78,7 +78,15 @@ params:
     distance: 1000
     threshold: 0.4
     minMatchCharLength: 0
-    keys: ["title", "permalink", "summary", "content"]
+    keys: ["title", "content"]
+
+#Enabling Search
+outputs:
+    home:
+        - HTML
+        - RSS
+        - JSON # is necessary
+
 menu:
   main:
     - identifier: Knowledge Base
@@ -97,6 +105,10 @@ menu:
       name: Providers
       url: /providers/
       weight: 40
+    - identifier: Search
+      name: Search
+      url: /search/
+      weight: 50
 
 privacy:
   youtube:
