Revert "Fix grammar in about and donate page"
This reverts commit 0a3f2036289a38df428397dcda019eb2cd6d87b3.

--- a/config.yml
+++ b/config.yml
@@ -20,13 +20,13 @@ params:
   ShowPostNavLinks: true
   ShowBreadCrumbs: true
   ShowWordCount: true
-  ShowToc: true
+  showtoc: true
   ShowRssButtonInSectionTermList: true
   ShowCodeCopyButtons: true
 
   assets:
     # disableHLJS: true # to disable highlight.js
-    disableFingerprinting: true
+    # disableFingerprinting: true
     favicon: "<link / abs url>"
     favicon16x16: "<link / abs url>"
     favicon32x32: "<link / abs url>"
@@ -78,15 +78,7 @@ params:
     distance: 1000
     threshold: 0.4
     minMatchCharLength: 0
-    keys: ["title", "summary"]
-
-#Enabling Search
-outputs:
-    home:
-        - HTML
-        - RSS
-        - JSON # is necessary
-
+    keys: ["title", "permalink", "summary", "content"]
 menu:
   main:
     - identifier: Knowledge Base
@@ -105,10 +97,6 @@ menu:
       name: Providers
       url: /providers/
       weight: 40
-    - identifier: Search
-      name: Search
-      url: /search/
-      weight: 50
 
 privacy:
   youtube:
