Code of Conflict
Signed-off-by: Tommy <contact@tommytran.io>

--- a/config.yml
+++ b/config.yml
@@ -44,6 +44,8 @@ params:
     buttons:
       - name: About
         url: about
+      - name: Conduct
+        url: conduct
       - name: Donate
         url: donate
       - name: Tags
