--- a/.github/workflows/pull-request-receiver.yml
+++ b/.github/workflows/pull-request-receiver.yml
@@ -27,5 +27,4 @@ jobs:
       - name: Upload artifact
         uses: actions/upload-artifact@v2
         with:
-          name: public
-          path: public/
+          name: hugo
