--- a/config.yml
+++ b/config.yml
@@ -27,11 +27,10 @@ params:
   assets:
     # disableHLJS: true # to disable highlight.js
     disableFingerprinting: true
-    favicon: "<link / abs url>"
-    favicon16x16: "<link / abs url>"
-    favicon32x32: "<link / abs url>"
-    apple_touch_icon: "<link / abs url>"
-    safari_pinned_tab: "<link / abs url>"
+    favicon: "/favicon.ico"
+    favicon16x16: "</favicon-16x16.png>"
+    favicon32x32: "</favicon-32x32.png>"
+    apple_touch_icon: "</apple-touch-icon.png>"
 
   label:
     text: "PrivSec.dev"
