--- a/firebase.json
+++ b/firebase.json
@@ -7,7 +7,7 @@
         "headers": [
           {
             "key": "Content-Security-Policy",
-            "value": "default-src 'self'; child-src 'self'; connect-src 'self'; font-src 'self'; img-src 'self'; manifest-src 'self'; style-src 'self'; form-action 'none'; frame-ancestors 'none'; block-all-mixed-content; base-uri 'none'"
+            "value": "child-src 'self'; connect-src 'self'; font-src 'self'; img-src 'self'; manifest-src 'self'; style-src 'self'; form-action 'none'; frame-ancestors 'none'; block-all-mixed-content; base-uri 'none'"
           },
           {
             "key": "X-Content-Type-Options",
