--- a/firebase.json
+++ b/firebase.json
@@ -52,6 +52,8 @@
       "firebase.json",
       "**/.*",
       "**/node_modules/**"
-    ]
+    ],
+    "cleanUrls": true,
+    "trailingSlash": false,
   }
 }
