Workflow variable change

--- a/.github/workflows/pull-request-receiver.yml
+++ b/.github/workflows/pull-request-receiver.yml
@@ -27,7 +27,7 @@ jobs:
       - name: Save PR number
         run: |
           mkdir -p ./pr
-          echo ${{ github.event.number }} > ./pr/NR
+          echo ${{ github.event.number }} > .PR
 
       - name: Upload artifact
         uses: actions/upload-artifact@v2
