--- a/.github/workflows/firebase-hosting-pull-request.yml
+++ b/.github/workflows/firebase-hosting-pull-request.yml
@@ -53,5 +53,5 @@ jobs:
           repoToken: '${{ secrets.GITHUB_TOKEN }}'
           firebaseServiceAccount: '${{ secrets.FIREBASE_SERVICE_ACCOUNT_PRIVSEC_356523 }}'
           projectId: privsec-356523
-          channelId: prs-${{ env.PR }}-${{ github.event.workflow_run.head_sha }}
+          channelId: pr${{ env.PR }}-${{ github.event.workflow_run.message }}
           expires: 30d
