--- a/netlify.toml
+++ b/netlify.toml
@@ -11,3 +11,6 @@
     X-XSS-Protection = "0"
     Permissions-Policy = "accelerometer=(), autoplay=(), camera=(), clipboard-read=(), clipboard-write=(), display-capture=(), document-domain=(), encrypted-media=(), fullscreen=(), geolocation=(), gyroscope=(), hid=(), magnetometer=(), microphone=(), midi=(), payment=(), picture-in-picture=(), publickey-credentials-get=(), screen-wake-lock=(), sync-xhr=(), usb=(), xr-spatial-tracking=()"
     Cross-Origin-Resource-Policy = "same-origin"
+
+[context.deploy-preview]
+command = "hugo -b $DEPLOY_PRIME_URL"
