--- a/netlify.toml
+++ b/netlify.toml
@@ -11,6 +11,7 @@
     X-XSS-Protection = "0"
     Permissions-Policy = "accelerometer=(), autoplay=(), camera=(), clipboard-read=(), display-capture=(), document-domain=(), encrypted-media=(), fullscreen=(), geolocation=(), gyroscope=(), hid=(), magnetometer=(), microphone=(), midi=(), payment=(), picture-in-picture=(), publickey-credentials-get=(), screen-wake-lock=(), sync-xhr=(), usb=(), xr-spatial-tracking=()"
     Cross-Origin-Resource-Policy = "same-origin"
+    Access-Control-Allow-Origin: "www.youtube-nocookie.com"
 
 [build.environment]
   HUGO_VERSION = "0.101.0"
