--- a/config.yml
+++ b/config.yml
@@ -1,6 +1,7 @@
 baseURL: "https://privsec.dev"
 title: PrivSec.dev
 theme: PaperMod
+copyright: '[CC BY-SA 4.0](https://creativecommons.org/licenses/by-sa/4.0/)'
 
 enableRobotsTXT: true
 
