Add Share Buttons
Signed-off-by: Tommy <contact@tommytran.io>

--- a/config.yml
+++ b/config.yml
@@ -23,6 +23,7 @@ params:
   ShowToc: true
   ShowRssButtonInSectionTermList: true
   ShowCodeCopyButtons: true
+  ShowShareButtons: true
 
   assets:
     # disableHLJS: true # to disable highlight.js
