--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "themes/PaperMod"]
-	path = themes/PaperMod
-	url = https://github.com/adityatelange/hugo-PaperMod.git
+[submodule "themes/WonderMod"]
+	path = themes/WonderMod
+	url = https://github.com/Wonderfall/hugo-WonderMod.git
