--- a/config.yml
+++ b/config.yml
@@ -32,7 +32,7 @@ params:
     favicon16x16: "/favicon-16x16.png"
     favicon32x32: "/favicon-32x32.png"
     apple_touch_icon: "/apple-touch-icon.png"
-    safari_pinned_tab: "/safari-pinned-tab.png"
+    safari_pinned_tab: "/safari-pinned-tab.svg"
 
   label:
     text: "PrivSec.dev"
