--- a/netlify.toml
+++ b/netlify.toml
@@ -21,3 +21,8 @@ package = "netlify-plugin-checklinks"
   # Checklinks outputs TAP (https://testanything.org/tap-version-13-specification.html)
   # by default. Enabling pretty mode makes the output easier on the eyes.
   pretty = true
+
+  # You can mark some check as skipped, which will block checklinks
+  # from ever attempting to execute them.
+  # skipPatterns is an array of strings you can match against failing reports
+  skipPatterns = [public/index.html, public/about/index.html, public/code/index.html, public/privacy/index.html, public/donate/index.html, public/404.html]
