--- a/netlify.toml
+++ b/netlify.toml
@@ -25,4 +25,11 @@ package = "netlify-plugin-checklinks"
   # You can mark some check as skipped, which will block checklinks
   # from ever attempting to execute them.
   # skipPatterns is an array of strings you can match against failing reports
-  skipPatterns = [public/index.html, public/about/index.html, public/code/index.html, public/privacy/index.html, public/donate/index.html, public/404.html]
+  skipPatterns = [
+    "public/index.html",
+    "public/about/index.html", 
+    "public/code/index.html", 
+    "public/privacy/index.html", 
+    "public/donate/index.html", 
+    "public/404.html",
+  ]
