Show full text RSS
Signed-off-by: Tommy <contact@tommytran.io>

--- a/config.yml
+++ b/config.yml
@@ -23,6 +23,7 @@ params:
   ShowWordCount: true
   ShowToc: true
   ShowRssButtonInSectionTermList: true
+  ShowFullTextinRSS: true
   ShowCodeCopyButtons: true
 
   assets:
