--- a/.github/dependabot.yaml
+++ b/.github/dependabot.yaml
@@ -1,6 +1,6 @@
 version: 2
 updates:
   - package-ecosystem: gitsubmodule
-    directory: "/themes"
+    directory: "/"
     schedule:
       interval: daily
