--- a/config.yml
+++ b/config.yml
@@ -28,7 +28,7 @@ params:
 
   assets:
     disableHLJS: true
-    disableFingerprinting: true
+    disableFingerprinting: false
     favicon: "/favicon/favicon.ico"
     favicon16x16: "/favicon/favicon-16x16.png"
     favicon32x32: "/favicon/favicon-32x32.png"
