--- a/config.yml
+++ b/config.yml
@@ -119,10 +119,14 @@ menu:
       name: Search
       url: /search/
       weight: 30
+    - identifier: Resources
+      name: Resources
+      url: /resources
+      weight: 40
     - identifier: PGP
       name: PGP
       url: https://tommytran.io/tommy.asc
-      weight: 40
+      weight: 50
 
 privacy:
   disqus:
