--- a/netlify.toml
+++ b/netlify.toml
@@ -2,7 +2,7 @@
   HUGO_VERSION = "0.114.0"
 
 [context.deploy-preview]
-  command = "sed -i 's/! Content-Security-Policy//g' static/_headers && hugo --minify"
+  command = "sed -i 's/! Content-Security-Policy//g' static/_headers && hugo -b $DEPLOY_PRIME_URL"
 
 [[plugins]]
 package = "netlify-plugin-checklinks"
